--- a/Prova-2/Lista-5/Makefile
+++ b/Prova-2/Lista-5/Makefile
@@ -1,4 +1,4 @@
-all: q1 q2 q3 q4 q5 q6 q7 q9 #q10 q11 q12 q13 q14 q15 q16 q17
+all: q1 q2 q3 q4 q5 q6 q7 q9 q10 q11 #q12 q13 q14 q15 q16 q17
 
 q1: q1.c
 q2: q2.c
@@ -8,8 +8,8 @@ q5: q5.c
 q6: q6.c
 q7: q7.c
 q9: q9.c
-#q10: q10.c
-#q11: q11.c
+q10: q10.c
+q11: q11.c
 #q12: q12.c
 #q13: q13.c
 #q14: q14.c
