--- a/Prova-2/Lista-5/Makefile
+++ b/Prova-2/Lista-5/Makefile
@@ -1,4 +1,4 @@
-all: q1 q2 q3 q4 q5 q6 q7 q9 q10 q11 q12 q13 q14 q15 #q16 q17
+all: q1 q2 q3 q4 q5 q6 q7 q9 q10 q11 q12 q13 q14 q15 q16 #q17
 
 q1: q1.c
 q2: q2.c
@@ -14,4 +14,4 @@ q12: q12.c
 q13: q13.c
 q14: q14.c
 q15: q15.c
-#q16: q16.c
+q16: q16.c
